; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions_clnt.c_ssl_next_proto_validate.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions_clnt.c_ssl_next_proto_validate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SSL_AD_DECODE_ERROR = common dso_local global i32 0, align 4
@SSL_F_SSL_NEXT_PROTO_VALIDATE = common dso_local global i32 0, align 4
@SSL_R_BAD_EXTENSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @ssl_next_proto_validate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ssl_next_proto_validate(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  br label %7

7:                                                ; preds = %24, %2
  %8 = load i32*, i32** %5, align 8
  %9 = call i64 @PACKET_remaining(i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %25

11:                                               ; preds = %7
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @PACKET_get_length_prefixed_1(i32* %12, i32* %6)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %11
  %16 = call i64 @PACKET_remaining(i32* %6)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %15, %11
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* @SSL_AD_DECODE_ERROR, align 4
  %21 = load i32, i32* @SSL_F_SSL_NEXT_PROTO_VALIDATE, align 4
  %22 = load i32, i32* @SSL_R_BAD_EXTENSION, align 4
  %23 = call i32 @SSLfatal(i32* %19, i32 %20, i32 %21, i32 %22)
  store i32 0, i32* %3, align 4
  br label %26

24:                                               ; preds = %15
  br label %7

25:                                               ; preds = %7
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %18
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @PACKET_remaining(i32*) #1

declare dso_local i32 @PACKET_get_length_prefixed_1(i32*, i32*) #1

declare dso_local i32 @SSLfatal(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
